--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
-  "name": "TGT",
+  "name": "tgt",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "repository": "https://github.com/juniorsundar/TGT.got",
-  "author": "juniorsundar",
-  "license": "MIT",
+  "directories": {
+    "doc": "docs"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/juniorsundar/TGT.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/juniorsundar/TGT/issues"
+  },
+  "homepage": "https://github.com/juniorsundar/TGT#readme",
   "dependencies": {
-    "@dendronhq/dendron-cli": "*"
+    "@dendronhq/dendron-cli": "^0.85.0"
   }
 }
