--- a/dendron.yml
+++ b/dendron.yml
@@ -73,6 +73,7 @@ workspace:
     enableFullHierarchyNoteTitle: false
     enableHandlebarTemplates: false
     templateHierarchy: template
+    enableSmartRefs: false
 preview:
     enableFMTitle: true
     enableNoteTitleForLink: true
