--- a/dendron.yml
+++ b/dendron.yml
@@ -73,6 +73,7 @@ workspace:
     dendronVersion: 0.83.0
     enableFullHierarchyNoteTitle: false
     templateHierarchy: template
+    enablePersistentHistory: false
 preview:
     enableFMTitle: true
     enableNoteTitleForLink: true
